# vera

./: .gitignore  Cargo.toml  README.md  compile_shaders.bat
examples/: README.md  triangle.rs  triangle_bg.rs
examples/dev/: Cargo.toml  README.md
examples/dev/lib/: Cargo.toml
examples/dev/lib/src/: lib.rs
examples/dev/src/: main.rs
examples/main/: README.md  run_all.sh
examples/main/circle/: Cargo.toml
examples/main/circle/src/: main.rs
examples/main/evolutions/: Cargo.toml  README.md
examples/main/evolutions/src/: main.rs
examples/main/neo_rug/: Cargo.toml  README.md
examples/main/neo_rug/src/: main.rs
examples/main/orbit/: Cargo.toml  README.md
examples/main/orbit/src/: main.rs
examples/main/platonic_life/: README.md
examples/main/platonic_life/src/: main.rs
examples/main/platonic_solids/: Cargo.toml
examples/main/sphere/: Cargo.toml
examples/main/sphere/src/: main.rs
examples/main/squares/: Cargo.toml  README.md
examples/main/squares/src/: main.rs
examples/main/tests/: Cargo.toml
examples/main/tests/src/: anim.rs  main.rs
examples/main/text/: Cargo.toml
examples/main/text/src/: main.rs
examples/main/tilings/: Cargo.toml
examples/main/triangles/: Cargo.toml
examples/main/triangles/src/: main.rs
examples/shapes/: run_all.sh
examples/shapes/evolutions/: Cargo.toml
examples/shapes/evolutions/src/: main.rs
examples/shapes/neo_rug/: Cargo.toml
examples/shapes/neo_rug/src/: main.rs
examples/shapes/squares/: Cargo.toml
examples/shapes/squares/src/: main.rs
examples/tests/: Cargo.toml
examples/tests/anim/: Cargo.toml
examples/tests/anim/src/: lib.rs
examples/tests/src/: main.rs
examples/triangle/lib/: Cargo.toml
examples/triangle/lib/src/: lib.rs
examples/triangle/src/: main.rs
src/: cs.rs  fs.rs  lib.rs  main.rs  ms.rs  test.rs  transform.rs  update.rs  vs.rs
src/elements/: mod.rs  triangle.rs  vertex.rs  viewport.rs
src/shape/: mod.rs
src/shapes/: mod.rs  regular_polygon.rs
src/vk/: .cpp  mod.rs
src/vk/shaders/: vert.spv
src/vk/utility/: constants.rs
src2/: lib.rs
src2/elements/: mod.rs  regular_polygon.rs
src2/examples/: Cargo.toml  triangle.rs
src2/vk/: mod.rs
src2/vk/utility/: fps_limiter.rs  mod.rs  window.rs
src2/vk/utility/share/: mod.rs  v1.rs
vera/: Cargo.toml  README.md
vera-core/: Cargo.toml  README.md
vera-core/src/: buffers.rs  lib.rs  test.rs  transformer.rs
vera-core/src/fonts/: README.md
vera-shapes/: Cargo.toml  README.md
vera-shapes/src/: lib.rs  model.rs  projection.rs  shape.rs  transform.rs  vertex.rs  view.rs
vera-transform/: Cargo.toml  README.md
vera/src/: buffer_contents.rs  buffers.rs  color.rs  lib.rs  matrix.rs  model.rs  projection.rs  transform.rs  transformer.rs  vertex.rs  view.rs
vera/src/elements/: vertex.rs
vera/src/extensions/: README.md  mod.rs
vera/src/extensions/shapes/: mod.rs
vera/src/extensions/text/: font.rs  mod.rs
vera/src/extensions/text/fonts/: cmunti_msdf_100_005.json  cmunti_mtsdf_128_16.json  cmunti_sdf.json  cmunti_sdf_128_16.json
