[package]
name = "vera"
version = "0.1.0"
# author = "Coddeus"
edition = "2021"
license = "GPL-3.0-only"
description = "Vulkan Engine in Rust for Animation"
documentation = "https://docs.rs/vera"
repository = "https://github.com/Coddeus/vera"
readme = "README.md"
keywords = ["animation", "vulkan", "videos", "graphics", "renderer"]
categories = ["graphics", "multimedia::video", "rendering::engine"]

exclude = [
    "examples",
]

[dependencies]
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
# sdl2 = { version = "0.35.2", features = ["bundled"] }
image = "0.24"
winit = "0.28.7"
hot-lib-reloader = "^0.6"


[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3