[workspace]
members = [
    "vera",
    "vera-shapes",
    "vera-transform",
]
resolver = "2"

[workspace.dependencies.vera]
version = "0.2.0"
path = "vera"

[workspace.dependencies.vera-shapes]
version = "0.2.0"
path = "vera-shapes"

[workspace.dependencies.vera-transform]
version = "0.2.0"
path = "vera-transform"